# CAS4133-hw2

./: .gitattributes  .gitignore  CAS4133-assn2.ipynb  main.py  pyproject.toml
outputs/checkpoint-100/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1000/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1100/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1200/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1300/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1400/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1500/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1600/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1700/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1800/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-1876/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-200/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-300/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-400/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-500/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-600/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-700/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-800/: rng_state.pth  scheduler.pt  trainer_state.json
outputs/checkpoint-900/: README.md  (+3 more)
