[project]
name = "cas4133"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.45.5",
    "gdown>=5.2.0",
    "huggingface-hub>=0.31.4",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab-git>=0.51.1",
    "nbdime>=4.0.2",
    "nvitop>=1.5.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "unsloth>=2025.5.7",
    "wandb>=0.19.11",
]
